fixed an issue with the vertical scrollbar showing up unnecessarily, removed unsupported iframe functionalities

--- a/frontend/curriculum-management/src/components/sidebar/Sidebar.css
+++ b/frontend/curriculum-management/src/components/sidebar/Sidebar.css
@@ -2,7 +2,7 @@
   background-color: #192637;
   padding: 15px;
   width: 3%;
-  height: 100%;
+  height: 100vh; /* Ensures the sidebar fills the entire viewport height */
   position: fixed;
   display: flex;
   flex-direction: column;
