--- a/frontend/curriculum-management/src/pages/test_result/TestResult.css
+++ b/frontend/curriculum-management/src/pages/test_result/TestResult.css
@@ -3,8 +3,9 @@
   flex-direction: column; /* Stack elements vertically */
   justify-content: center; /* Center the card vertically */
   align-items: center; /* Center the card horizontally */
-  height: 100vh; /* Full viewport height */
+  height: auto;
   position: relative; /* Make container relative to position button at the bottom */
+  margin-top: 5%;
 }
 
 .result-card-passed {
